fix: overflow-wrap

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -114,3 +114,7 @@ blockquote {
 li {
   --at-apply: line-height-relaxed;
 }
+
+.md-content {
+  overflow-wrap: break-word;
+}
